# mcp-github

./: AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml  tofu.yml
chart/: Chart.yaml  values.yaml
chart/templates/: auth-delegator.yaml  deployment.yaml  externalsecret.yaml  proxy-config.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
infra/: azure_data.tf  keyvault.tf  providers.tf  terraform.tf  variables.tf
src/mcp_github/: auth.py  auth_romaine.py  caller.py  control_audit.py  github_client.py  http.py  metrics.py  minter_pool.py  stdio.py  tools.py
tests/: test_admin_installations.py  test_auth_romaine.py  test_caller.py  test_control_action_audit_tools.py  test_cross_install_fallback.py  test_github_client_errors.py  test_graphql_mark_ready.py  test_host_owner_routing.py  test_issue_comment_reads.py  test_list_installation_repos_contract.py  test_mint_clone_token.py  test_minter_pool.py  test_token_lifecycle.py
